<?xml version="1.0" encoding="utf-8" ?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="?android:attr/colorBackground"
    tools:context=".FourthFragment">

    <TextView
        android:id="@+id/forthTextHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/openFifthFragmentButton"
        android:text="@string/forth_fragment_text"
        android:textSize="24sp"
        android:textColor="?android:attr/textColorPrimary"
        android:gravity="center"
        android:padding="16dp" />

    <Button
        android:id="@+id/openFifthFragmentButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_button"
        android:text="@string/go_to_fifth_fragment"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/forthTextHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingVertical="12dp"
        android:paddingHorizontal="32dp" />

    <Button
        android:id="@+id/openFirstFragmentButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_button"
        android:text="@string/go_to_first_fragment"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/openFifthFragmentButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingVertical="12dp"
        android:paddingHorizontal="32dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
